2008-07-18  Marek Safar  <marek.safar@gmail.com>

	* convert.cs: Don't box same type arguments.

2008-07-18  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs, linq.cs, delegate.cs, constant.cs, nullable.cs, expression.cs:
	Finished missing generic type mutators.

2008-07-18  Marek Safar  <marek.safar@gmail.com>

	* iterators.cs, statement.cs: Finished statements CloneTo.

2008-07-18  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs: ExpressionTreeProxy is of Value type expression.
	
	* expression.cs: Emit optimized default value expressions in expression tree
	array initializer.

2008-07-18  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs, cs-parser.jay, statement.cs: Error reporting fixes.

2008-07-17  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #367536
	* cs-parser.jay: Check static constructor of generic types for an access
	modifier.

2008-07-17  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #353800
	* lambda.cs: Emit ret for contextual statements.
	
	* codegen.cs: Keep both resolved and unreachable flags, otherwise we end
	up emitting redundant ret for all anonymous methods with return.

2008-07-17  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #365188
	* ecore.cs, anonymous.cs, expression.cs, codegen.cs, statement.cs: Don't
	create anonymous method storey in unreachable block.

2008-07-17  Marek Safar  <marek.safar@gmail.com>

	* generic.cs, typemanager.cs, cs-tokenizer.cs, parameter.cs, namespace.cs,
	class.cs, delegate.cs, flowanalysis.cs, iterators.cs, anonymous.cs,
	driver.cs, nullable.cs, expression.cs, attribute.cs, codegen.cs,
	statement.cs: Fixed relevant defects found by Gendarme.

2008-07-17  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #325291
	* modifiers.cs, class.cs, cs-parser.jay, anonymous.cs, codegen.cs, 
	statement.cs: Replaced IAnonymousHost with top level block flag.

2008-07-17  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Clean up unused open_parens.
