@@ -1,5 +1,10 @@
 2008-07-18  Marek Safar  <marek.safar@gmail.com>
 
+	A fix for bug #410666
+	* anonymous.cs: Correctly initialize generic storey reference.
+
+2008-07-18  Marek Safar  <marek.safar@gmail.com>
+
 	* convert.cs: Don't box same type arguments.
 
 2008-07-18  Marek Safar  <marek.safar@gmail.com>
